# raytracer

./: .editorconfig  Cargo.toml  Justfile  README.md
.github/workflows/: ci.yml
crates/raytracer-cli/: Cargo.toml
crates/raytracer-cli/src/: main.rs
crates/raytracer-core/: Cargo.toml
crates/raytracer-core/src/: camera.rs  collider.rs  color.rs  context.rs  hit_record.rs  hittable.rs  image.rs  lib.rs  material.rs  random.rs  ray.rs  ray_shader.rs  renderer.rs  scene.rs  vec3.rs  world.rs
crates/raytracer-core/src/primitives/: mod.rs  sphere.rs
crates/raytracer-gpu-renderer/: Cargo.toml
crates/raytracer-gpu-renderer/src/: lib.rs
crates/raytracer-image-renderer/: Cargo.toml
crates/raytracer-image-renderer/src/: lib.rs  ppm.rs  renderer.rs
crates/raytracer-image-renderer/src/tests/: mod.rs
crates/raytracer-samples/: Cargo.toml
crates/raytracer-samples/src/: lib.rs
crates/raytracer-samples/src/samples/: basic_gradient.rs  mod.rs  ray_gradient.ppm  ray_gradient.rs  ray_sphere.ppm  ray_sphere.rs  ray_sphere_antialias.ppm  ray_sphere_antialias.rs  ray_sphere_normals.rs  ray_sphere_struct.ppm  ray_sphere_struct.rs
crates/raytracer-samples/src/tests/: basic_gradient.ppm  basic_gradient.rs  glass_sphere.ppm  glass_sphere.rs  hollow_glass_sphere.ppm  hollow_glass_sphere.rs  mod.rs  point_of_view.ppm  point_of_view.rs  random_spheres.ppm  random_spheres.rs  ray_diffuse.ppm  ray_diffuse.rs  ray_gradient.ppm  ray_gradient.rs  ray_sphere.ppm  ray_sphere.rs  (+4 more)
crates/raytracer-window-renderer/: Cargo.toml
crates/raytracer-window-renderer/src/: lib.rs
(+19 files in other folders)
